<?xml version="1.0"?>
<package format="2">
  <name>sp4_panda_ctrl</name>
  <version>0.0.1</version>
  <description>Control utilities for the Franka Panda using MoveIt</description>

  <maintainer email="dylan.stratmann@stud.thga.de">dylan</maintainer>
  <license>MIT</license>

  <!-- Optional but nice to have -->
  <url type="website">http://wiki.ros.org/sp4_panda_ctrl</url>

  <!-- Build tool -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core runtime/build deps (format=2: <depend> == build + exec + export) -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>


  <export/>
</package>
